--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: flask-webhook
     env: python
     buildCommand: ""
-    startCommand: gunicorn app:app
+    startCommand: gunicorn app:app --timeout 600
     envVars:
       - key: FLASK_ENV
         value: production
